--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #333;
+}
 .topnav {
     background-color: #333;
     overflow: hidden;
