--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
     background-color: #333;
 }
 .topnav {
+    transition: top 0.3s;
+    position: fixed;
     background-color: #333;
     overflow: hidden;
   }
@@ -15,11 +17,12 @@ body{
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    display: block;
   }
   
   .topnav a:hover {
     background-color: #9A2A2A;
-    color: black;
+    color: white;
   }
   
   .topnav a.active {
