--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ body{
     background-color: #9A2A2A;
     color: white;
   }
+
+  .content{
+    background-color: #333;
+    text-align: left;
+  }
