--- a/style.css
+++ b/style.css
@@ -47,5 +47,13 @@ body{
     background-image: url('./pictures/profile_picture.jpeg');
     background-size: cover; 
     height:480px; 
-    padding-top:80px;
+    padding-top: 180px;
+  }
+
+  .name{
+    background-color: #333;
+    color: white;
+    width: 400px;
+    height: 50px;
+    padding-top: 10px;
   }
