--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ body{
   }
 
   .profile_picture{
-    background-image: url('./pictures/profile_picture.jpeg');
+    background-color: #333;
     background-size: cover; 
-    height:480px; 
+    height:150px; 
     padding-top: 180px;
   }
 
