--- a/style.css
+++ b/style.css
@@ -54,6 +54,18 @@ body{
     background-color: #333;
     color: white;
     width: 400px;
-    height: 50px;
+    height: auto;
     padding-top: 10px;
+    text-align: center;
+    size: 24px;
+  }
+
+  .information{
+    background-color: #333;
+    color: white;
+    width: 400px;
+    height: auto;
+    padding-top: 5px;
+    text-align: left;
+    size: 12px;
   }
