--- a/style.css
+++ b/style.css
@@ -39,24 +39,27 @@ body{
 
   .about_me{
     background-color: #333;
-    width: 400px;
+    width: 200px;
     height: 800px;
+    border-right: #fff;
   }
 
   .profile_picture{
     background-color: #333;
     background-size: cover; 
     height:150px; 
-    padding-top: 180px;
+    padding-top: 10px;
+    border-right: #fff;
   }
 
   .name{
     background-color: #333;
     color: white;
-    width: 400px;
+    width: 200px;
     height: auto;
     padding-top: 10px;
-    text-align: center;
+    text-align: left;
+    padding: left 50px;
     size: 24px;
   }
 
