--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
     width: 200px;
     height: 800px;
     border-right: #fff;
+    border-style: solid;
   }
 
   .profile_picture{
@@ -50,6 +51,7 @@ body{
     height:150px; 
     padding-top: 10px;
     border-right: #fff;
+    border-style: solid;
   }
 
   .name{
@@ -59,7 +61,7 @@ body{
     height: auto;
     padding-top: 10px;
     text-align: left;
-    padding: left 50px;
+    padding-left: 100px;
     size: 24px;
   }
 
@@ -90,4 +92,10 @@ body{
     background-image: './resume';
     height: auto;
     width: auto;
+  }
+
+  .hover:hover{
+    text-align: left;
+    size: 12px;
+    color: blue;
   }
