--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ body{
   .resume{
     text-align: center;
     background-image: 'Resume.pdf';
-    height: auto;
-    width: auto;
+    height: 800px;
+    width: 400px;
   }
 
   .hover:hover{
