Changed Hover text color

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body{
     padding-top: 10px;
     text-align: center;
     size: 24px;
+    padding-left: 10px;
   }
 
   .information{
@@ -89,8 +90,7 @@ body{
   }
 
   .resume{
-    text-align: center;
-    background-image: 'Resume.pdf';
+    background-image: './Resume.pdf';
     height: 800px;
     width: 400px;
   }
@@ -98,7 +98,7 @@ body{
   .hover:hover{
     text-align: left;
     size: 12px;
-    color: blue;
+    color: #9A2A2A;
   }
 
   .main_content{
