Added extra padding to main content section

--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ body{
     height: auto;
     text-align: left;
     color: #fff;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
 
